@@ -75,6 +75,12 @@ patch_phantom_resource_bug = true
 [=== ENGINE EXTENSIONS ===]
 [=========================]
 
+; These "NoRaze" options can stop cities from being destroyed. "Autorazing" refers to the automatic destruction of size one, cultureless cities. If
+; autorazing is prevented, players will be given the option to keep the city. If razing by players is prevented, neither the human player nor AIs will
+; be allowed to raze or abandon cities.
+prevent_autorazing = false
+prevent_razing_by_players = false
+
 adjust_minimum_city_separation = 0
 disallow_founding_next_to_foreign_city = true
 
@@ -90,8 +96,6 @@ remove_era_limit = false
 remove_cap_on_turn_limit = true
 
 enable_free_buildings_from_small_wonders = true
-prevent_autorazing = false
-prevent_razing_by_ai_players = false
 allow_stealth_attack_against_single_unit = true
 disallow_trespassing = false
 enable_land_sea_intersections = false
